--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "html-template-tag": "^3.2.0",
-    "pg": "^8.5.1"
+    "pg": "^8.5.1",
+    "sequelize": "^6.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
