--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon /Users/sbyeon/GH-Junior/wikistack/db.js"
+    "start": "nodemon db.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "html-template-tag": "^3.2.0",
+    "morgan": "^1.10.0",
     "pg": "^8.5.1",
     "sequelize": "^6.4.0"
   },
